--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+.app-title{
+    text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-container{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.link-generation-card{
+    box-shadow: 0 0 10px lightblue;
+    border-radius:10px;
+    padding: 20px;
+    background-color:whitesmoke;
+    color: black;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.user-input{
+    display: block;
+    width: 250px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    padding: 5px 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.btn-generate-link{
+    display: block;
+    background-color: black;
+    color: #fff;
+    padding: 10px 30px;
+    border-radius: 50px;
+    border: none;
+    margin: 10px auto;
+    cursor:pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-short-url{
+   
+    width: 220px;
+    font-size: 20px;
+    padding: 5px 10px;
+}
+.short-url-container{
+    display: flex;
+    justify-content: space-around;
+    align-items:center;
+}
+.copy-img{
+    cursor: pointer;
 }
