--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,8 +10,9 @@
     box-shadow: 0 0 10px lightblue;
     border-radius:10px;
     padding: 20px;
-    background-color:whitesmoke;
+    background-color:rgb(213, 237, 244);
     color: black;
+    height: 300px;
 }
 .user-input{
     display: block;
@@ -45,10 +46,21 @@
     cursor: pointer;
 }
 .link-card{
-    background-color: #fff;
+    /* background-color:rgb(213, 237, 244); */
+    background-color: white;
+    /* background-color: whitesmoke; */
     padding: 5px 10px;
     margin: 10px;
     border-radius: 10px;
     box-shadow: 0 0 10px lightblue;
     color: black;
+}
+.all-links-container{
+    height: 80vh;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: 1px;
+}
+.all-links-container::-webkit-scrollbar {
+    display: none;
 }
