--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,10 +5,12 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    padding-top: 40px;
 }
 .link-generation-card{
     box-shadow: 0 0 10px lightblue;
     border-radius:10px;
+    margin-top: 10px;
     padding: 20px;
     background-color:rgb(213, 237, 244);
     color: black;
@@ -20,16 +22,24 @@
     margin-bottom: 10px;
     font-size: 20px;
     padding: 5px 10px;
+    margin-top:15px;
+    border-radius: 5px;
+    border: 1px solid gray;
+
+}
+.text-center{
+    text-align: center;
 }
 .btn-generate-link{
     display: block;
     background-color: black;
     color: #fff;
     padding: 10px 30px;
-    border-radius: 50px;
+    border-radius: 10px;
     border: none;
-    margin: 10px auto;
+    margin: 40px auto;
     cursor:pointer;
+    font-size: 20px;
 }
 .input-short-url{
    
@@ -47,7 +57,7 @@
 }
 .link-card{
     /* background-color:rgb(213, 237, 244); */
-    background-color: white;
+    background-color:white;
     /* background-color: whitesmoke; */
     padding: 5px 10px;
     margin: 10px;
@@ -56,11 +66,19 @@
     color: black;
 }
 .all-links-container{
-    height: 80vh;
+    height: 72vh;
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: 1px;
 }
 .all-links-container::-webkit-scrollbar {
     display: none;
+}
+.link-text{
+    font-size: 20px;
+    
+}
+.text-url{
+    color:rgb(5, 117, 161);
+    font-size: 17px;
 }
